<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dip"
    android:layout_marginRight="16dip"
    android:paddingRight="16dip"
    tools:context=".InstructionActivity">

    <TextView
        android:id="@+id/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/step2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/instructiontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="INSTRUCTION"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructiontext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/step1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/step3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/step4"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/step5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/step5"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />
</RelativeLayout>